# Energy-Ladder

./: CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  __init__.py  config.py  demo_script.py  pyproject.toml  requirements.txt
dashboard/: app.py  requirements.txt
dashboard/components/: layout.py  metrics.py
docs/: architecture.md  setup_guide.md
factory_io/: factory_io_utils.py  systeme de stockage et assemblage des pieces.factoryio  systeme de stockage et assemblage des pieces.vi
factory_io/modbus_config/: README.md
labview/: labview_integration.py
models/: model_architecture.py
notebooks/: 01_data_simulation.ipynb  02_rl_training.ipynb  03_model_validation.ipynb  04_performance_analysis.ipynb
tests/: test_dashboard_components.py  test_env.py  test_simulation.py
