# Smart Energy Lader - PyProject Configuration

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-energy-lader"
version = "1.0.0"
description = "AI-powered energy optimization for industrial automation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Smart Energy Lader Team", email = "team@smartenergylader.dev"}
]

keywords = [
    "reinforcement-learning",
    "energy-optimization",
    "factory-automation",
    "iot",
    "industrial"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "gym>=0.26.2",
    "stable-baselines3>=2.1.0",
    "torch>=2.0.1",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "mypy>=1.4.1",
    "black>=23.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
